// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card snapshots > css mode snapshot 1`] = `
"import React from 'react';
import styles from './Card.module.css';
export type CardVariant = 'default' | 'hoverable' | 'clickable';
export type CardSize    = 'sm' | 'md' | 'lg';

export interface Props {
  variant?:   Variant;
  size?:      Size;
  
  
  
  
  
  title?:    string;
  
  onClick?:  () => void;
  href?:     string;
  
}

export const CardRoot = ({
  variant = 'default',
  size = 'md',
  children,
  onClick,
  className,
  href,
}: CardProps) => {
  const isClickable = variant === 'clickable' || !!onClick || !!href;
  
  const cls = [
    styles.card,
    styles[\`card--\${variant}\`],
    styles[\`card--\${size}\`],
    isClickable && styles['card--clickable'],
    className,
  ].filter(Boolean).join(' ');

  const handleKeyDown = (e: React.KeyboardEvent) => {
    if (isClickable && (e.key === 'Enter' || e.key === ' ')) {
      e.preventDefault();
      onClick?.();
      if (href) window.location.href = href;
    }
  };

  const Component = href ? 'a' : isClickable ? 'button' : 'article';

  return (
    <Component
      className={cls}
      onClick={onClick}
      href={href}
      role={href ? undefined : isClickable ? 'button' : 'article'}
      tabIndex={isClickable ? 0 : undefined}
      onKeyDown={isClickable ? handleKeyDown : undefined}
    >
      {children}
    </Component>
  );
};

export const CardHeader = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={[styles.header, className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardTitle = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <h3 className={[styles.title, className].filter(Boolean).join(' ')}>{children}</h3>
);

export const CardDescription = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <p className={[styles.description, className].filter(Boolean).join(' ')}>{children}</p>
);

export const CardAction = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={[styles.action, className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardContent = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={[styles.content, className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardFooter = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={[styles.footer, className].filter(Boolean).join(' ')}>{children}</div>
);

export const Card = Object.assign(CardRoot, {
  Header: CardHeader,
  Title: CardTitle,
  Description: CardDescription,
  Action: CardAction,
  Content: CardContent,
  Footer: CardFooter,
});

Card.displayName = 'Card';
"
`;

exports[`Card snapshots > css mode snapshot 2`] = `
"/* Generated by Crucible — edit freely, re-generate with --force */

.card {
  --card-bg: var(--color-surface);
  --card-border: var(--color-border);
  --card-radius: var(--radius-lg);
  --card-shadow: 0 1px 3px rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.06);
  --card-header-padding: calc(var(--spacing-unit) * 6);
  --card-content-padding: calc(var(--spacing-unit) * 6);
  --card-footer-padding: calc(var(--spacing-unit) * 6);

  display:        flex;
  flex-direction: column;
  background:     var(--card-bg);
  border:         1px solid var(--card-border);
  border-radius:  var(--card-radius);
  color:          var(--color-text);
  font-family:    var(--font-family);
  overflow:       hidden;
  text-align:     left;
  width:          100%;
  padding:        0;
  margin:         0;
  text-decoration: none;
  box-shadow:     var(--card-shadow);
}

.card:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px var(--card-bg), 0 0 0 4px var(--color-primary);
}

/* Sizes */
.card--sm { max-width: 300px; }
.card--md { max-width: 450px; }
.card--lg { max-width: 600px; }

/* Variants */
.card--hoverable:hover {
  border-color: var(--color-primary);
  box-shadow:   0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
}

.card--clickable {
  cursor: pointer;
  transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
}

.card--clickable:hover {
  border-color: var(--color-primary);
  box-shadow:   0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
  transform:    translateY(-4px);
}

.card--clickable:active {
  transform:    translateY(0);
}

.header, .card-header {
  padding: var(--card-header-padding);
  border-bottom: 1px solid var(--card-border);
}

.title, .card-title {
  margin:      0;
  padding:     var(--card-header-padding);
  font-size:   1.1rem;
  font-weight: 600;
  color:       var(--color-text);
  font-family: var(--font-family);
}

.description, .card-description {
  margin:      0;
  padding:     0 var(--card-header-padding);
  font-size:   0.875rem;
  color:       var(--color-text-muted);
  font-family: var(--font-family);
}

.action, .card-action {
  margin-left: auto;
  display:     flex;
  align-items: center;
  gap:        var(--spacing-unit);
}

.content, .card-content {
  padding: var(--card-content-padding);
}

.footer, .card-footer {
  padding: var(--card-footer-padding);
  border-top: 1px solid var(--card-border);
}
"
`;

exports[`Card snapshots > css mode snapshot 3`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Card } from './Card';

const meta: Meta<typeof Card> = {
  title: 'Crucible/Card',
  component: Card,
  parameters: { layout: 'centered' },
  argTypes: {
    variant: { control: 'select', options: ['default', 'hoverable', 'clickable'] },
    size:    { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Card>;

export const Default: Story = {
  args: { variant: 'default', size: 'md' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Card Title</h3>
      </Card.Header>
      <Card.Content>
        This is a default card with some content inside it.
      </Card.Content>
    </Card>
  ),
};

export const Hoverable: Story = {
  args: { variant: 'hoverable' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Hoverable Variant</h3>
      </Card.Header>
      <Card.Content>
        Card content with hoverable variant.
      </Card.Content>
    </Card>
  ),
};
export const Clickable: Story = {
  args: { variant: 'clickable' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Clickable Variant</h3>
      </Card.Header>
      <Card.Content>
        Card content with clickable variant.
      </Card.Content>
    </Card>
  ),
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Sm Size</h3>
      </Card.Header>
      <Card.Content>
        Card content with sm size.
      </Card.Content>
    </Card>
  ),
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Md Size</h3>
      </Card.Header>
      <Card.Content>
        Card content with md size.
      </Card.Content>
    </Card>
  ),
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Lg Size</h3>
      </Card.Header>
      <Card.Content>
        Card content with lg size.
      </Card.Content>
    </Card>
  ),
};

export const WithFooter: Story = {
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Card with Footer</h3>
      </Card.Header>
      <Card.Content>
        The footer can contain actions or additional information.
      </Card.Content>
      <Card.Footer>
        <div style={{ display: 'flex', gap: '8px', justifyContent: 'flex-end' }}>
          <button style={{ padding: '4px 8px' }}>Cancel</button>
          <button style={{ padding: '4px 8px' }}>Confirm</button>
        </div>
      </Card.Footer>
    </Card>
  ),
};
"
`;

exports[`Card snapshots > tailwind mode snapshot 1`] = `
"import React from 'react';

const variantClasses: Record<string, string> = {
  default: 'bg-[var(--color-surface)] border-[var(--color-border)]',
  hoverable: 'bg-[var(--color-surface)] border-[var(--color-border)] hover:shadow-lg',
  clickable: 'bg-[var(--color-surface)] border-[var(--color-border)] cursor-pointer hover:shadow-lg',
 };

const sizeClasses: Record<string, string> = {
  sm: 'p-4',
  md: 'p-6',
  lg: 'p-8',
};

export type CardVariant = 'default' | 'hoverable' | 'clickable';
export type CardSize    = 'sm' | 'md' | 'lg';

export interface CardProps {
  variant?:   CardVariant;
  size?:      CardSize;
  title?:     string;
  children:   React.ReactNode;
  onClick?:   () => void;
  className?: string;
  href?:      string;
}

export const CardRoot = ({
  variant = 'default',
  size = 'md',
  children,
  onClick,
  className,
  href,
}: CardProps) => {
  const isClickable = variant === 'clickable' || !!onClick || !!href;
  
  const cls = [
    'rounded-[var(--radius-lg)] border-[1.5px] transition-all text-left w-full block',
    'focus-visible:outline focus-visible:outline-2 focus-visible:outline-[var(--color-primary)] focus-visible:outline-offset-2',
    variantClasses[variant],
    sizeClasses[size],
    className,
  ].filter(Boolean).join(' ');

  const handleKeyDown = (e: React.KeyboardEvent) => {
    if (isClickable && (e.key === 'Enter' || e.key === ' ')) {
      e.preventDefault();
      onClick?.();
      if (href) window.location.href = href;
    }
  };

  const Component = href ? 'a' : isClickable ? 'button' : 'article';

  return (
    <Component
      className={cls}
      onClick={onClick}
      href={href}
      role={href ? undefined : isClickable ? 'button' : 'article'}
      tabIndex={isClickable ? 0 : undefined}
      onKeyDown={isClickable ? handleKeyDown : undefined}
    >
      {children}
    </Component>
  );
};

export const CardHeader = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={['mb-4', className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardTitle = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <h3 className={['font-semibold text-lg text-[var(--color-text)]', className].filter(Boolean).join(' ')}>{children}</h3>
);

export const CardDescription = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <p className={['text-sm text-[var(--color-text-muted)]', className].filter(Boolean).join(' ')}>{children}</p>
);

export const CardAction = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={['ml-auto flex items-center gap-2', className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardContent = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={['text-[var(--color-text-muted)]', className].filter(Boolean).join(' ')}>{children}</div>
);

export const CardFooter = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={['mt-4 flex items-center', className].filter(Boolean).join(' ')}>{children}</div>
);

export const Card = Object.assign(CardRoot, {
  Header: CardHeader,
  Title: CardTitle,
  Description: CardDescription,
  Action: CardAction,
  Content: CardContent,
  Footer: CardFooter,
});

Card.displayName = 'Card';

export const CardDescription = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <p className={['text-sm text-[var(--color-text-muted)]', className].filter(Boolean).join(' ')}>{children}</p>
);

export const CardAction = ({ children, className }: { children: React.ReactNode; className?: string }) => (
  <div className={['ml-auto flex items-center gap-2', className].filter(Boolean).join(' ')}>{children}</div>
);

export const Card: React.FC<CardProps> = ({
  variant = 'default',
  size = 'md',
  title,
  children,
  onClick,
  className,
  href,
}) => {
  const isClickable = variant === 'clickable' || !!onClick || !!href;
  
  const cls = [
    'rounded-[var(--radius-lg)] border-[1.5px] transition-all text-left w-full block',
    'focus-visible:outline focus-visible:outline-2 focus-visible:outline-[var(--color-primary)] focus-visible:outline-offset-2',
    variantClasses[variant],
    sizeClasses[size],
    className,
  ].filter(Boolean).join(' ');

  const handleKeyDown = (e: React.KeyboardEvent) => {
    if (isClickable && (e.key === 'Enter' || e.key === ' ')) {
      e.preventDefault();
      onClick?.();
      if (href) window.location.href = href;
    }
  };

  const Component = href ? 'a' : isClickable ? 'button' : 'article';

  return (
    <Component
      className={cls}
      onClick={onClick}
      href={href}
      role={href ? undefined : isClickable ? 'button' : 'article'}
      tabIndex={isClickable ? 0 : undefined}
      onKeyDown={isClickable ? handleKeyDown : undefined}
    >
      {title && <h3 className="font-bold text-lg mb-2 text-[var(--color-text)]">{title}</h3>}
      <div className="text-[var(--color-text-muted)]">{children}</div>
    </Component>
  );
};

Card.displayName = 'Card';
"
`;

exports[`Card snapshots > tailwind mode snapshot 2`] = `
"import type { Meta, StoryObj } from '@storybook/react';
import React, { useState } from 'react';
import { Card } from './Card';

const meta: Meta<typeof Card> = {
  title: 'Crucible/Card',
  component: Card,
  parameters: { layout: 'centered' },
  argTypes: {
    variant: { control: 'select', options: ['default', 'hoverable', 'clickable'] },
    size:    { control: 'select', options: ['sm', 'md', 'lg'] },
  },
};
export default meta;
type Story = StoryObj<typeof Card>;

export const Default: Story = {
  args: { variant: 'default', size: 'md' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Card Title</h3>
      </Card.Header>
      <Card.Content>
        This is a default card with some content inside it.
      </Card.Content>
    </Card>
  ),
};

export const Hoverable: Story = {
  args: { variant: 'hoverable' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Hoverable Variant</h3>
      </Card.Header>
      <Card.Content>
        Card content with hoverable variant.
      </Card.Content>
    </Card>
  ),
};
export const Clickable: Story = {
  args: { variant: 'clickable' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Clickable Variant</h3>
      </Card.Header>
      <Card.Content>
        Card content with clickable variant.
      </Card.Content>
    </Card>
  ),
};

export const Sm: Story = {
  args: { size: 'sm' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Sm Size</h3>
      </Card.Header>
      <Card.Content>
        Card content with sm size.
      </Card.Content>
    </Card>
  ),
};
export const Md: Story = {
  args: { size: 'md' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Md Size</h3>
      </Card.Header>
      <Card.Content>
        Card content with md size.
      </Card.Content>
    </Card>
  ),
};
export const Lg: Story = {
  args: { size: 'lg' },
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Lg Size</h3>
      </Card.Header>
      <Card.Content>
        Card content with lg size.
      </Card.Content>
    </Card>
  ),
};

export const WithFooter: Story = {
  render: (args) => (
    <Card {...args}>
      <Card.Header>
        <h3 style={{ margin: 0 }}>Card with Footer</h3>
      </Card.Header>
      <Card.Content>
        The footer can contain actions or additional information.
      </Card.Content>
      <Card.Footer>
        <div style={{ display: 'flex', gap: '8px', justifyContent: 'flex-end' }}>
          <button style={{ padding: '4px 8px' }}>Cancel</button>
          <button style={{ padding: '4px 8px' }}>Confirm</button>
        </div>
      </Card.Footer>
    </Card>
  ),
};
"
`;
